# python-duckdb-etl-framework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  benchmark.py  build.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/example-configs/: azure.yaml  csv.yaml  iceberg.yaml  smallpond-azure.yaml  smallpond-local.yaml  splitter.yaml  test_config.yaml
examples/example-transforms/: sales_metrics.py
examples/smallpond/: generate_local_parquet.py
examples/template/: template.py
src/azure/: jta_credential.py
src/database/: connection_string.py
src/framework/: azure_credential.py  main.py
tests/: test_etl_framework.py
