[tool.poetry]
name = "data-engineering-etl-framework"
version = "0.0.4"
description = "Data Engineering ETL Framework"
authors = ["Carlos Elói Barros <eloi.barros@thedatascientists.com>"]
readme = "README.md"
homepage = "https://github.com/celoibarros/python-duckdb-etl-framework"
repository = "https://github.com/celoibarros/python-duckdb-etl-framework"
keywords = [
    "duckdb",
    "etl",
    "data-engineering",
    "azure",
    "abfs",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "framework", from = "src" }
    , { include = "database", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
boto3 = "1.35.93"
duckdb = "1.3.2"
PyYAML = "6.0.2"
fsspec = "2025.3.2"
adlfs = "2024.12.0"
numpy = "2.2.6"
pandas = "2.2.3"
sqlfluff = "3.4.0"
fuzzywuzzy = "0.18.0"
python-Levenshtein = "0.27.1"
pyarrow = "20.0.0"
sqlparse = "0.5.3"
azure-keyvault = "4.2.0"
pyodbc = "5.2.0"
psutil = "7.0.0"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.6.11"
mkdocstrings-python = "^1.16.8"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
